--- a/package.json
+++ b/package.json
@@ -11,34 +11,48 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@gsap/react": "^2.1.2",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.1.9",
     "@mui/styles": "^6.1.9",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.12.51",
     "@vercel/analytics": "^1.5.0",
     "animejs": "^4.1.2",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.39.2",
-    "framer-motion": "^12.26.1",
+    "framer-motion": "^12.34.0",
     "gsap": "^3.14.2",
     "heroicons": "^2.2.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
+    "postprocessing": "^6.38.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.16.0",
+    "react-progressive-blur": "^1.0.6",
     "react-router-dom": "^7.1.1",
     "react-transition-group": "^4.4.5",
     "sass": "^1.82.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
-    "@types/node": "24.0.3",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.2.13",
+    "@types/three": "^0.182.0",
     "eslint-config-next": "^16.1.1",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.9.3"
   }
 }
